@@ -1,0 +1,8 @@
+epsg_code,inverted
+3034,1
+3035,1
+3042,1
+3043,1
+4326,1
+4559,1
+4471,0
