@@ -1,0 +1,56 @@
+/******************************************************************************
+ * $Id: $
+ *
+ * Project:  MapServer
+ * Purpose:  Axis lookup table
+ *
+ ******************************************************************************
+ * Copyright (c) 1996-2005 Regents of the University of Minnesota.
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a
+ * copy of this software and associated documentation files (the "Software"),
+ * to deal in the Software without restriction, including without limitation
+ * the rights to use, copy, modify, merge, publish, distribute, sublicense,
+ * and/or sell copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in 
+ * all copies of this Software or works derived from this Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+ * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
+ * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+ * DEALINGS IN THE SOFTWARE.
+ ****************************************************************************/
+ 
+/*
+ * Generated file
+ *
+ * This file was generated from by means of a script. Do not edit manually.
+ */
+ 
+#ifdef __cplusplus
+extern "C" {
+#endif
+ 
+static struct axisOrientationEpsgCodes_s {
+	int	code;
+ int	inverted; /*true=1, false =0*/
+} axisOrientationEpsgCodes[] = {
+  {3034,1},
+  {3035,1},
+  {3042,1},
+  {3043,1},
+  {4326,1},
+  {4559,1},
+  {4471,0},
+};
+ 
+#define AXIS_ORIENTATION_TABLE_SIZE 8
+ 
+#ifdef __cplusplus
+}
+#endif
